cargo-features = ["codegen-backend"]

[package]
name = "RoguelikeAgain"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
#bevy_doryen = "0.6.0"
doryen-rs = "1.3.0"
hecs = "0.10.5"
rand = "0.9.2"
#bevy = { version = "~0.17", features = ["wayland", "webgl2"] }
#bevy_ecs_tilemap = "0.17.0"
#bevy = { version = "0.17.2", features = ["webgl2", "bevy_asset", "bevy_camera", "bevy_color", "bevy_core_pipeline", "bevy_gltf", "bevy_image", "bevy_input_focus", "bevy_render", "bevy_scene", "bevy_text", "bevy_ui", "bevy_ui_render", "bevy_window", "debug", "bevy_winit", "default_font", "multi_threaded", "png", "std", "x11", "wayland"] }
#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
#rand = "0.9.2"
#rand_chacha = "0.9.0"
#bracket-color = { git = "https://github.com/amethyst/bracket-lib" }
#bracket-lib = { git = "https://github.com/amethyst/bracket-lib", features = ["webgpu", "threaded", "serde"] }
#specs = "0.20.0"
#specs-derive = "0.4.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld",
    # (Nightly) Make the current crate share its generic instantiations
    "-Zshare-generics=y", ]

[unstable]
codegen-backend = true

[profile.dev.package."*"]
codegen-backend = "llvm"


# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3
