cargo-features = ["codegen-backend"]

[package]
name = "RoguelikeAgain"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
doryen-rs = "1.3.0"
hecs = "0.10.5"
rand = "0.9.2"
tracing = { version = "0.1.41", features = ["log", "max_level_debug"] }
tracing-subscriber = "0.3.20"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld",
    # (Nightly) Make the current crate share its generic instantiations
    "-Zshare-generics=y", ]

[unstable]
codegen-backend = true

[profile.dev.package."*"]
codegen-backend = "llvm"


# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3
